--- a/readme.org
+++ b/readme.org
@@ -2,4 +2,4 @@
 
 ECSE 4320 Fall 2024
 
-** Project 1 [[./CachePerformance][Cache Performance]]
+** [[./CachePerformance][Project 1]] Cache Performance
