initial matrix multiplication code

--- a/MatrixMultiplication/readme.org
+++ b/MatrixMultiplication/readme.org
@@ -1,1 +1,7 @@
 #+title: Matrix-Matrix Multiplication
+
+#+begin_src bash
+gcc matrixmult.c -o matrixmult -Wall -msse3 -O3
+
+./matrixmult [-t <n>] [-dcs] [-s1 <%>] [-s2 <%>] <size>
+#+end_src
