--- a/MatrixMultiplication/readme.org
+++ b/MatrixMultiplication/readme.org
@@ -29,13 +29,13 @@ All data in this document was taken from the generated ~log.txt~ file.
 
 * Different Optimization Levels
 ** Optimizations for Different Sizes
-[[file:images/Optimizations for 500 Matrix Size.png]]
+[[file:images/Optimizations_for_500_Matrix_Size.png]]
 
-[[file:images/Optimizations for 1000 Matrix Size.png]]
+[[file:images/Optimizations_for_1000_Matrix_Size.png]]
 
-[[file:images/Optimizations for 2500 Matrix Size.png]]
+[[file:images/Optimizations_for_2500_Matrix_Size.png]]
 
-[[file:images/Optimizations for 5000 Matrix Size.png]]
+[[file:images/Optimizations_for_5000_Matrix_Size.png]]
 
 As can be seen in the graphs above, SIMD and cache optimizations saw the best performance
 improvements. SIMD saw consistent improvement regardless of matrix size, while cache
@@ -47,16 +47,16 @@ with cache. This may be due to the added overhead of managing the threads, or so
 throttling done by the OS because the computer was running on battery.
 
 ** Optimizations for Different Sparcities
-[[file:images/Optimizations for 5000 Matrix Size With 0% Sparcity.png]]
+[[file:images/Optimizations_for_5000_Matrix_Size_With_0%_Sparcity.png]]
 
-[[file:images/Optimizations for 5000 Matrix Size With 1% Sparcity.png]]
+[[file:images/Optimizations_for_5000_Matrix_Size_With_1%_Sparcity.png]]
 
 As can be seen in the graphs above, the performance improvements for each set of
 optimizations stays consistent across different sparcities. This makes sense because no
 sparse matrix compression is being performed in either case.
 
 * Dense-Dense Matrix Multiplication
-[[file:images/Dense-Dense with 1% Sparcity.png]]
+[[file:images/Dense-Dense_with_1%_Sparcity.png]]
 
 As can be seen in the execution time increases by ~8x between sizes. This matches what
 would be expected, as the size doubles and the non-optimized matrix multiplication algorithm
@@ -64,13 +64,13 @@ is O(N^3).
 
 * Sparse-Dense Matrix Multiplication
 ** Sparse-Dense for Different Sizes
-[[file:images/Sparse-Dense with Matrix Size 500.png]]
+[[file:images/Sparse-Dense_with_Matrix_Size_500.png]]
 
-[[file:images/Sparse-Dense with Matrix Size 1000.png]]
+[[file:images/Sparse-Dense_with_Matrix_Size_1000.png]]
 
-[[file:images/Sparse-Dense with Matrix Size 2500.png]]
+[[file:images/Sparse-Dense_with_Matrix_Size_2500.png]]
 
-[[file:images/Sparse-Dense with Matrix Size 5000.png]]
+[[file:images/Sparse-Dense_with_Matrix_Size_5000.png]]
 
 As can be seen in the graphs above, as the sparcity increases, the execution time tends
 to decrease. The decrease is not a major amount, but is still significant.
@@ -79,11 +79,11 @@ The only outlier to this is the 500 x 500 matrix, which has an increase in execu
 for the 5% sparcity. This may be caused by the added overhead in generating the sparse-matrix.
 
 ** Sparse-Dense for Different Sparcities
-[[file:images/Sparse-Dense with 0.1% Sparcity.png]]
+[[file:images/Sparse-Dense_with_0.1%_Sparcity.png]]
 
-[[file:images/Sparse-Dense with 1% Sparcity.png]]
+[[file:images/Sparse-Dense_with_1%_Sparcity.png]]
 
-[[file:images/Sparse-Dense with 5% Sparcity.png]]
+[[file:images/Sparse-Dense_with_5%_Sparcity.png]]
 
 The trends shown above are pretty consistent with what was seen for Dense-Dense Matrix
 Multiplication. Notably, however, the execution times are lower than what was seen for
@@ -91,13 +91,13 @@ Dense-Dense matrices, as the matrices are being compressed.
 
 * Sparse-Sparse Matrix Multiplication
 ** Sparse-Sparse for Different Sizes
-[[file:images/Sparse-Sparse with Matrix Size 500.png]]
+[[file:images/Sparse-Sparse_with_Matrix_Size_500.png]]
 
-[[file:images/Sparse-Sparse with Matrix Size 1000.png]]
+[[file:images/Sparse-Sparse_with_Matrix_Size_1000.png]]
 
-[[file:images/Sparse-Sparse with Matrix Size 2500.png]]
+[[file:images/Sparse-Sparse_with_Matrix_Size_2500.png]]
 
-[[file:images/Sparse-Sparse with Matrix Size 5000.png]]
+[[file:images/Sparse-Sparse_with_Matrix_Size_5000.png]]
 
 The results in the graphs above show similar trends to the Sparse-Dense results. As the
 sparcity increases, the execution time decreases by a small amount. The execution times
@@ -107,11 +107,11 @@ Unlike the Sparse-Dense results, there is no increase in execution time for 5% s
 the matrix size is 500 x 500. This may be because the increase was an outlier in the data.
 
 ** Sparse-Sparse for Different Sparcities
-[[file:images/Sparse-Sparse with 0.1% Sparcity.png]]
+[[file:images/Sparse-Sparse_with_0.1%_Sparcity.png]]
 
-[[file:images/Sparse-Sparse with 1% Sparcity.png]]
+[[file:images/Sparse-Sparse_with_1%_Sparcity.png]]
 
-[[file:images/Sparse-Sparse with 5% Sparcity.png]]
+[[file:images/Sparse-Sparse_with_5%_Sparcity.png]]
 
 The trends shown above are pretty consistent with what was seen for Dense-Dense and
 Sparse-Dense matrix multiplication. Similarly to the Sparse-Dense results, the execution
