--- a/SSDPerformanceProfiling/readme.org
+++ b/SSDPerformanceProfiling/readme.org
@@ -1,7 +1,8 @@
 #+title: SSD Performance Profiling
 
-The following command was used to generate all data below. *NOTE:* to change the targeted
-partition, edit the fio job file.
+The following command was used to generate all data below. It may need to be run as ~sudo~.
+
+*NOTE:* to change the targeted partition, edit the fio job file.
 
 #+begin_src bash
 ./run.py
